--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ description = "A key-value storage engine"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 clap = "2.33.0"
-serde = "1.0.100"
+serde = {version="1.0.100", features=["derive"]}
 bincode = "1.1.4"
 serde_json = "*"
 
