fix code to pass testing code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,11 @@ predicates = "1.0.0"
 rand = "0.6.5"
 tempfile = "3.0.7"
 walkdir = "2.2.7"
+
+[[bin]]
+name = "kvs-client"
+path = "src/bin/kvs_client.rs"
+
+[[bin]]
+name = "kvs-server"
+path = "src/bin/kvs_server.rs"
